# locode

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  MODELS.md  README.md  architecture.md  config.toml.example  install.sh  pyproject.toml
evals/: LOG.md  README.md  harness.py  trace.py
evals/cases/design-doc/: case.json  check.py  prompt.md
evals/cases/e2e-spec-to-code/: case.json  check.py  prompt.md
evals/cases/exec-bugfix/: case.json  check.py  prompt.md
evals/cases/plan-doc/: check.py  (+2 more)
locode/: __init__.py  __main__.py  cli.py  config.py  install.py  permissions.py  scaffold.py  session.py  telemetry.py  uninstall.py  upgrade.py
locode/agent/: cancel.py  compact.py  loop.py  messages.py  plan.py
locode/model/: client.py  profiles.py  toolparse.py
locode/server/: aliases.py  manager.py
locode/tools/: __init__.py  ask.py  base.py  fs.py  installhint.py  plan.py  shell.py  web.py
locode/ui/: banner.py  choice.py  editor.py  interrupt.py  render.py  repl.py  slash.py  spinner.py
scripts/: model_reliability_probe.sh
tests/: test_aliases.py  test_cli_uninstall.py  test_cli_upgrade.py  test_client.py  test_compact.py  test_config.py  test_config_example.py  test_fs_tools.py  test_harness.py  test_install.py  test_installhint.py  test_interrupt.py  test_loop.py  test_manager.py  test_permissions.py  test_plan.py  test_profiles.py  test_render.py  test_repl_sessions.py  test_scaffold.py  test_session.py  test_shell.py  test_spinner.py  test_telemetry.py  test_toolparse.py  test_ui_units.py  test_uninstall.py  test_upgrade.py  test_version.py  test_web.py
(+30 files in other folders)
