[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "locode"
version = "0.1.0"
description = "A Claude Code-style agentic CLI for local LLMs served by mlx_lm.server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "locode" }]
dependencies = [
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
locode = "locode.cli:main"

[tool.setuptools.packages.find]
include = ["locode*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
